[package]
name = "pauza"
version = "0.1.0"
authors = ["Tristan <tristan.king@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }
nwg = { version = "1.0.6", package = "native-windows-gui" }